动静态库相关

--- a/IO/Makefile
+++ b/IO/Makefile
@@ -1,5 +1,12 @@
-redir:redir.c
+obj=test.o add.o sub.o
+
+test:$(obj)
 	gcc -o $@ $^
+%.o:%.c ./lib_/%.c
+	gcc -c $< 
+
+%.o:./lib_/%.c
+	gcc -c $< 
 .PHONY:clean
 clean:
-	rm -r redir
+	rm -f *.o test
